syntax = "proto3";

package bilibili.app.interface.v1;

message DefaultWordsReply {
    string show = 3;
    string word = 4;
    int64 show_front = 5;
    string goto = 7;
    string value = 8;
    string uri = 9;
}
