syntax = "proto3";

package bilibili.app.view.v1;

message ViewReply {
    ReqUser req_user = 4;
    repeated Relate relates = 10;
    bytes label = 23;
    repeated bytes cms = 30;
    bytes cm_config = 31;
    bytes cm_ipad = 41;
    repeated bytes special_cell_new = 50;
}

message ReqUser {
    bytes elec_plus_btn = 9;
}

message Relate {
    bytes cm = 28;
}

message ViewProgressReply {
    bytes video_guide = 1;
    Chronos chronos = 2;
}

message Chronos {
    string md5 = 1;
    string file = 2;
    optional string sign = 3;
}

message TFInfoReply {
    int64 tips_id = 1;
    bytes tf_toast = 2;
    bytes tf_panel_customized = 3;
}
