syntax = "proto3";

package bilibili.app.viewunite.v1;

message ViewReply {
    ReqUser req_user = 3;
    Tab tab = 5;
    bytes cm = 7;
}

message ReqUser {
    bytes elec_plus_btn = 7;
}

message Tab {
    repeated TabModule tab_module = 1;
}

message TabModule {
    TabType tab_type = 1;
    oneof tab {
        IntroductionTab introduction = 2;
    }
}

message IntroductionTab {
    repeated Module modules = 2;
}

message Module {
    ModuleType type = 1;
    oneof data {
        Headline head_line = 5;
        Relates relates = 22;
    }
}

message Headline {
    bytes label = 1;
}

message Relates {
    repeated RelateCard cards = 1;
}

message RelateCard {
    RelateCardType relate_card_type = 1;
    bytes cm_stock = 11;
    CardBasicInfo basic_info = 12;
}

enum TabType {
    TAB_NONE = 0;
    TAB_INTRODUCTION = 1;
}

enum ModuleType {
    UNKNOWN = 0;
    UGC_HEADLINE = 3;
    RELATED_RECOMMEND = 28;
    PAY_BAR = 29;
    SPECIALTAG = 37;
    MERCHANDISE = 55;
}

enum RelateCardType {
    CARD_TYPE_UNKNOWN = 0;
    AV = 1;
    GAME = 4;
    CM_TYPE = 5;
    LIVE = 6;
    AI_RECOMMEND = 7;
    COURSE = 11;
}

message CardBasicInfo {
    string unique_id = 6;
}

message ViewProgressReply {
    bytes dm = 4;
}

message RelatesFeedReply {
    repeated RelateCard relates = 1;
}
