syntax = "proto3";

package bilibili.community.service.dm.v1;

message DmViewReply {
    repeated string activity_meta = 18;
    Command command = 22;
}

message Command {
    repeated bytes command_dms = 1;
}

message DmSegMobileReq {
    int64 pid = 1;
    int64 oid = 2;
    int32 type = 3;
    int64 segment_index = 4;
    int64 ps = 6;
    int64 pe = 7;
}

message DmSegMobileReply {
    repeated DanmakuElem elems = 1;
}

message DanmakuElem {
    int64 id = 1;
    int32 progress = 2;
    int32 mode = 3;
    int32 fontsize = 4;
    int32 color = 5;
    string mid_hash = 6;
    string content = 7;
    int64 ctime = 8;
    int32 weight = 9;
    string action = 10;
    int32 pool = 11;
    string id_str = 12;
    int32 attr = 13;
    string animation = 22;
    string extra = 23;
    DmColorfulType colorful = 24;
    int32 type = 25;
    int64 oid = 26;
    int32 dm_from = 27;
}

enum DmColorfulType {
    NONE_TYPE = 0;
    VIP_GRADUAL_COLOR = 60001;
}
