syntax = "proto3";

package bilibili.playershared;

message PlayArcConf {
    map<int32, ArcConf> arc_confs = 1;
}

message ArcConf {
    bool is_support = 1;
    bool disabled = 2;
    ExtraContent extra_content = 3;
    repeated int32 unsupport_scene = 4;
}

message ExtraContent {
    string disable_reason = 1;
    int64 disable_code = 2;
}

message ViewInfo {
    bytes prompt_bar = 2;
}
